[package]
name = "waw"
version = "0.1.0"
authors = ["Alex <grampz@pm.me>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
auditable-build = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auditable = "0.1.0"
proptest = "0.10.1"
tokio = { version = "0.2.22", features = ["full"] }
serde_json = "1.0.57"
reqwest = { version = "0.10.8", features = ["json"] }
clap = "3.0.0-beta.1"
oauth2 = { version = "3.0.0", features = ["futures-03", "reqwest-010"] }
url = "2.1.1"
serde = "1.0.116"
flexbuffers = "0.1.1"
chrono = "0.4.15"
async-trait = "0.1.40"
rust-lzma = "0.5.1"
tokio-timer = "0.2.13"
config = "0.10.1"
env_logger = "0.7.1"
log = "0.4.11"
redis = "0.17.0"
glob = "0.3.0"
itertools = "0.9.0"
actix = "0.10.0"
csv = "1.1.3"
anyhow = "1.0.32"
regex = "1.3.9"
lazy_static = "1.4.0"
