[package]
name = "server"
version = "0.1.0"
authors = ["Alex <squidnyan@pm.me>"]
edition = "2018"

[dependencies]
log = "0.4.11"
redis = "0.16.0"
actix-rt = "1.1.1"
waw = { path = "../cli" }
serde = "1.0.114"
csv = "1.1.3"
env_logger = "0.7.1"
actix-web = "2.0.0"
actix = "0.9.0"
actix-cors = "0.2.0"
actix-service = "1.0.5"
